--- a/TrayVolumeControlLib/TrayVolumeControlLib.vcxproj
+++ b/TrayVolumeControlLib/TrayVolumeControlLib.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="TVCShared.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
