--- a/TrayVolumeControlLib/TrayVolumeControlLib.vcxproj.filters
+++ b/TrayVolumeControlLib/TrayVolumeControlLib.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TVCShared.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
